[gd_scene load_steps=2 format=3 uid="uid://hiepg2tys6ms"]

[ext_resource type="Script" path="res://gui.gd" id="1_e686x"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e686x")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.19, 0.19, 0.19, 1)

[node name="ChessBoard" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 720.0
color = Color(0.4, 0.4, 0.4, 1)

[node name="BoardGrid" type="GridContainer" parent="ChessBoard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -345.0
offset_right = 343.0
offset_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="TestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 878.0
offset_top = 30.0
offset_right = 1127.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 30
text = "Test
"

[node name="InputFen" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 735.0
offset_top = 146.0
offset_right = 1259.0
offset_bottom = 188.0
placeholder_text = "Fen string here..."

[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]
[connection signal="text_changed" from="InputFen" to="." method="_on_input_fen_text_changed"]
